--- a/ColeccionDeJuegos/Info.plist
+++ b/ColeccionDeJuegos/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>La aplicacion Coleccion de juegos necesita tomar fotos con la camara!!</string>
+	<key></key>
+	<string></string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>La aplicacion Colección de Juegos necesita acceso a tus imagenes</string>
 	<key>CFBundleDevelopmentRegion</key>
